--- a/catalog/templates/delete.html
+++ b/catalog/templates/delete.html
@@ -10,10 +10,10 @@
 		<div id="nav">
 		
 			{% for c in categories %}
-				<a href= '{{url_for('view_category_items', category_name = c.name)}}'>{{c.name}}</a>
+				<a href= "{{url_for('view_category_items', category_id = c.id)}}">{{c.name}}</a>
 			{% endfor %}
-			<a href = '{{url_for('gdisconnect')}}'>Logout</a> <br />
-			<a href= '/'> Home </a>
+			<a href = "{{url_for('gdisconnect')}}">Logout</a> <br />
+			<a href= "/"> Home </a>
 
 		</div>	
 
@@ -21,7 +21,7 @@
 			<h2><u>{{item.name}}</u></h2>
 	
 
-		<form action='{{url_for('delete_item', item_name=item.name)}}' method ='POST'>
+		<form action="{{url_for('delete_item', item_id=item.id)}}" method ='POST'>
 			
 				Are you sure you want to delete this item?
 				<input type='submit' value='Delete'>
