--- a/catalog/templates/edit_no_permissions.html
+++ b/catalog/templates/edit_no_permissions.html
@@ -11,12 +11,12 @@
 		
 		<div id="nav">
 		
-			<a href= '/'> Home </a>
+			<a href= "/"> Home </a>
 			</br>
 			{% for c in categories %}
-				<a href= '{{url_for('view_category_items', category_name = c.name)}}'>{{c.name}}</a>
+				<a href= "{{url_for('view_category_items', category_id = c.id)}}">{{c.name}}</a>
 			{% endfor %}
-			<a href= '{{url_for('gdisconnect')}}'>Logout</a>
+			<a href= "{{url_for('gdisconnect')}}">Logout</a>
 
 
 
