--- a/catalog/templates/item.html
+++ b/catalog/templates/item.html
@@ -11,12 +11,12 @@
 		
 		<div id="nav">
 		
-			<a href= '/'> Home </a>
+			<a href= "/"> Home </a>
 			</br>
 			{% for c in categories %}
-				<a href= '{{url_for('view_category_items', category_name = c.name)}}'>{{c.name}}</a>
+				<a href= "{{url_for('view_category_items', category_id = c.id)}}">{{c.name}}</a>
 			{% endfor %}
-			<a href= '{{url_for('gdisconnect')}}'>Logout</a>
+			<a href= "{{url_for('gdisconnect')}}">Logout</a>
 
 
 
@@ -35,8 +35,8 @@
 
 			{% for i in categories %}
 				{% if item.category_id == i.id %}
-				<a href='{{url_for('edit_item', category_name=i.name, item_name=item.name)}}'>Edit</a> | 
-				<a href='{{url_for('delete_item', item_name=item.name)}}'>Delete</a>
+				<a href="{{url_for('edit_item', category_id=i.id, item_id=item.id)}}">Edit</a> | 
+				<a href="{{url_for('delete_item', item_id=item.id)}}">Delete</a>
 			
 				{% endif %}
 			{% endfor %}
