--- a/catalog/templates/view_item.html
+++ b/catalog/templates/view_item.html
@@ -7,7 +7,7 @@
 			<h1>Catalog</h1>
 			
 			<div id="login">
-				<a href='{{url_for('showLogin')}}'>Login </a>
+				<a href="{{url_for('showLogin')}}">Login </a>
 			</div>
 			
 		</div>
@@ -15,10 +15,10 @@
 		
 		<div id="nav">
 		
-			<a href= '/'> Home </a>
+			<a href= "/"> Home </a>
 			</br>
 			{% for c in categories %}
-				<a href= '{{url_for('view_category_items', category_name = c.name)}}'>{{c.name}}</a>
+				<a href= "{{url_for('view_category_items', category_id = c.id)}}">{{c.name}}</a>
 			{% endfor %}
 
 
